feat: update admin manage page feat: new UI

--- a/admin/request_music/index.html
+++ b/admin/request_music/index.html
@@ -5,7 +5,7 @@
     <!--文字コード・互換モード-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
-    <title>リクエスト曲管理 | 水戸一高附属中総合ウェブサイト</title>
+    <title>リクエスト曲管理 | 管理者用ページ</title>
     <!--ビューポート-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--css-->
